# python-aoc

./: .gitignore  README.md  init.py  pyproject.toml  run.py
year2021/day02/: solver.py
year2022/day01/: solver.py
year2022/day02/: solver.py
