[tool.poetry]
name = "python-aoc"
version = "0.1.0"
description = ""
authors = ["James Stuart <james.stuart@gmail.com>"]
readme = "README.md"
packages = [{include = "python_aoc"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-watch = "^4.2.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
